# helix-context

./: .gitignore  CLAUDE.md  GEMINI.md  LICENSE  NOTICE  README.md  SESSION_HANDOFF.md  backend-with-otel.bat  helix.toml  helix_status.py  launcher-with-otel.bat  pyproject.toml  setup-helix.bat  start-helix-mcpo.bat  start-helix-tray.bat
.github/workflows/: publish.yml
benchmarks/: _run_n1000_sweep_2026-04-14.sh  _run_slice3_gate.sh  ab_flag_sweep.py  ab_sweep_all_on.json  ab_sweep_baseline.json  ab_sweep_sr.json  ab_sweep_summary.json  ab_sweep_w1.json  bench_babilong.py  bench_budget_zone.py  bench_cache_hitrate.py  bench_chroma_integration.py  bench_compression.py  bench_dal_http_s3.py  bench_dimensional_lock.py  bench_external_retriever.py  bench_forward_recall.py  bench_headroom_latency.py  bench_helix_rag_composition.py  bench_multi_needle.py  bench_multi_needle_50.py  bench_needle.py  bench_needle_1000.py  bench_packet.py  bench_rag_vs_sike_tokens.py  bench_skill_activation.py  bench_stale_claim_avoidance.py  bench_sweep.py  benchmark_monitor.py  compare_ab.py  fingerprint_06b_test.py  needle_results.json  precision_probe.py  precision_sensitivity.py  precision_tie_break_ab.py  precision_tie_graph_coverage.py  precision_tie_inspection.py
benchmarks/results/: cache_hitrate_2026-04-19.json  chroma_integration_2026-04-19.json  dal_http_s3_2026-04-19.json  external_retriever_2026-04-19.json  external_retriever_2026-04-21.json  file_grain_diagnostic_2026-04-18.json  headroom_latency_2026-04-19.json  helix_rag_composition_2026-04-19.json  helix_rag_composition_2026-04-22.json  helix_rag_composition_2026-04-24.json  multi_needle_2026-04-19.json  multi_needle_2026-04-21.json  multi_needle_50_2026-04-19.json  needle_step1b_conf_null_2026-04-17.json  needle_step1b_iter2_pathcov_2026-04-18.json  packet_bench_2026-04-18.json  packet_bench_2026-04-21.json  packet_bench_2026-04-22.json  stale_claim_avoidance_2026-04-19.json  waude_diagnostic_2026-04-17.md
benchmarks/snow/: bench_snow.py  cascade.py  oracle.py  prompts.py  snow_compare.py  snow_queries.json
deploy/: README.md
deploy/launchd/: com.swiftwing21.helix-launcher.plist
deploy/otel/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
deploy/systemd/: helix-launcher.service
deploy/windows/: README.md  setup-helix.ps1
docs/: BENCHMARKS.md  BENCHMARK_RATIONALE.md  DESIGN_TARGET.md  DIMENSIONS.md  FEDERATION_LOCAL.md  INTEGRATING_WITH_EXISTING_RAG.md  LAUNCHER.md  MISSION.md  MUSIC_OF_RETRIEVAL.md  OBSERVABILITY.md  PIPELINE_LANES.md  RESEARCH.md  RESTART_PROTOCOL.md  ROSETTA.md  SESSION_REGISTRY.md
docs/FUTURE/: AB_TEST_PLAN.md  IMPLEMENTATION_ROADMAP.md  INDEX_MODE_ENDPOINT.md  STATISTICAL_FUSION.md  TCM_VELOCITY.md  (+1 more)
examples/: hgt_transfer.py  quickstart.py  seed_genome.py
helix_context/: __init__.py  accel.py  aliases.py  bridge.py  budget_zone.py  claims.py  claims_analyze.py  claims_graph.py  codons.py  config.py  context_manager.py  context_packet.py  cwola.py  cymatics.py  deberta_backend.py  exceptions.py  expand.py  filename_anchor.py  fusion_plr.py  genome.py  headroom_bridge.py  hgt.py  legibility.py  mcp_server.py  mem_sync.py  nli_backend.py  provenance.py  ray_trace.py  registry.py  replication.py  ribosome.py  schemas.py  seeded_edges.py  sema.py  server.py  session_delivery.py  shard_router.py  shard_schema.py  sharding.py  splade_backend.py  (+7 more)
scripts/: .ingest_progress  _write_tcm.py  analyze_density_scores.py  backfill_claims.py  backfill_cwola_sema.py  backfill_cwola_sessions.py  backfill_filename_anchor.py  backfill_filename_domains.py  backfill_gene_provenance.py  backfill_kv_tagger_fix.py  backfill_parent_genes.py  backfill_path_key_index.py  backfill_seeded_edges.py  backfill_sema_embeddings.py  build_bench_genomes.py  claude_batch_ingest.py  claude_core_ingest.py  compact_genome_sweep.py  cross_compare_genomes.py  cwola_log_stats.py  deep_ingest.py  deep_ingest_parallel.py  diagnose_file_grain.py  diagnose_query_extraction.py  docs_tidy_diff.py  docs_tidy_probe.py  docs_tidy_reingest.py  e8_crossover_curve.py  e8_crossover_fixed_k.py  e8_retest_april12.py  export_cwola_log.py  fresh_genome_build.py  generate_ssh_key.sh  genome_cleanup.py  helix_heartbeat.py  ingest_all.py  ingest_fdrive.py  ingest_models.py  ingest_parallel.py  ingest_steam.py  (+9 more)
tests/: conftest.py  test_accel.py  test_backfill_filename_domains.py  test_bench_harvest.py  test_bridge_registry.py  test_bridge_restart.py  test_budget_zone.py  test_cache.py  test_claims.py  test_claims_analyze.py  test_claims_graph.py  test_codons.py  test_context_packet.py  test_cwola.py  test_cwola_window.py  test_cymatics.py  test_cymatics_flux.py  test_dal.py  test_density_gate.py  test_epigenetic_markers.py  test_expand.py  test_fusion_plr.py  test_genome.py  test_headroom_bridge.py  test_headroom_supervisor.py  test_health.py  test_ingest_metadata.py  test_integration.py  test_launcher_app.py  test_launcher_collector.py  test_launcher_installer.py  test_launcher_state.py  test_launcher_supervisor.py  test_launcher_tray.py  test_layered_fingerprints.py  test_legibility.py  test_mcp_server.py  test_metrics.py  test_pipeline.py  test_ray_trace.py  (+21 more)
training/: README.md  export_nli_data.py  export_training_data.py  finetune_nli.py  finetune_rerank.py  finetune_splice.py
(+87 files in other folders)
